@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-23T16:20:52Z",
-  "count_outdated" : 918,
-  "uniques_outdated" : 270,
-  "count" : 976,
-  "uniques" : 280,
+  "timestamp" : "2023-10-25T01:11:49Z",
+  "count_outdated" : 925,
+  "uniques_outdated" : 272,
+  "count" : 982,
+  "uniques" : 281,
   "views" : [
-    {
-      "timestamp": "2023-10-10T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-10-11T00:00:00Z",
       "count": 2,
@@ -49,6 +40,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-24T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "count_decinc": [ 0, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
