@@ -1,12 +1,7 @@
 {
-  "count": 58,
-  "uniques": 10,
+  "count": 57,
+  "uniques": 9,
   "views": [
-    {
-      "timestamp": "2023-10-10T00:00:00Z",
-      "count": 7,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-10-11T00:00:00Z",
       "count": 2,
@@ -26,6 +21,11 @@
       "timestamp": "2023-10-21T00:00:00Z",
       "count": 29,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-24T00:00:00Z",
+      "count": 6,
+      "uniques": 1
     }
   ]
 }
